# the-mind

./: .gitignore  CONCEPT.md  LICENSE  LICENSES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  main.rs  mcp_server.rs  session_forge.rs  utils.rs  wallpaper.rs
src/components/: AmbientParticles.tsx  AxonConnection.tsx  ClusterCloud.tsx  CommandCenter.tsx  DebugBridge.tsx  ForgeContextPane.tsx  IdleDriftCamera.tsx  MindChamber.tsx  MindCrosshair.tsx  MindSpace.tsx  NeuronNode.tsx  Settings.tsx  SetupWizard3D.tsx  ThoughtCard.tsx  ThoughtDetail.tsx  ThoughtPulse.tsx  WallpaperCamera.tsx
src/hooks/: useDatabaseSync.ts
src/stores/: activationStore.ts  dreamStore.ts  forgeStore.ts  idleStore.ts  mindStore.ts  thinkingStore.ts  timelineStore.ts  wallpaperStore.ts
